--- a/contracts/package.json
+++ b/contracts/package.json
@@ -16,6 +16,7 @@
     "@ethereumjs/common": "^2.0.0-beta.2",
     "@ethereumjs/tx": "^3.0.0-beta.2",
     "eth-lib": "^0.1.29",
+    "eth-proof": "^2.1.4",
     "merkle-patricia-tree": "^4.0.0",
     "rlp": "^2.2.6"
   }
