--- a/contracts/package.json
+++ b/contracts/package.json
@@ -21,5 +21,11 @@
     "eth-proof": "^2.1.4",
     "merkle-patricia-tree": "^4.0.0",
     "rlp": "^2.2.6"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-truffle5": "^2.0.0",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "hardhat": "^2.0.4",
+    "web3": "^1.3.0"
   }
 }
