--- a/contracts/package.json
+++ b/contracts/package.json
@@ -15,8 +15,8 @@
   "license": "GPLv3",
   "dependencies": {
     "@ethereumjs/block": "^3.0.0-beta.2",
-    "@ethereumjs/common": "^2.0.0-beta.2",
-    "@ethereumjs/tx": "^3.0.0-beta.2",
+    "@ethereumjs/common": "^2.0.0",
+    "@ethereumjs/tx": "^3.0.0",
     "eth-lib": "^0.1.29",
     "eth-proof": "^2.1.4",
     "merkle-patricia-tree": "^4.0.0",
